--- a/index.ipynb
+++ b/index.ipynb
@@ -35,8 +35,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/matthew.mitchell/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -68,12 +66,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60000 entries, 0 to 59999\n",
+      "Data columns (total 2 columns):\n",
+      "Product                         60000 non-null object\n",
+      "Consumer complaint narrative    60000 non-null object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 937.6+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Consumer complaint narrative</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Student loan</td>\n",
+       "      <td>In XX/XX/XXXX I filled out the Fedlaon applica...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Student loan</td>\n",
+       "      <td>I am being contacted by a debt collector for p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Student loan</td>\n",
+       "      <td>I cosigned XXXX student loans at SallieMae for...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Student loan</td>\n",
+       "      <td>Navient has sytematically and illegally failed...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Student loan</td>\n",
+       "      <td>My wife became eligible for XXXX Loan Forgiven...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Product                       Consumer complaint narrative\n",
+       "0  Student loan  In XX/XX/XXXX I filled out the Fedlaon applica...\n",
+       "1  Student loan  I am being contacted by a debt collector for p...\n",
+       "2  Student loan  I cosigned XXXX student loans at SallieMae for...\n",
+       "3  Student loan  Navient has sytematically and illegally failed...\n",
+       "4  Student loan  My wife became eligible for XXXX Loan Forgiven..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "#import pandas as pd #As reference; already imported above"
+    "#import pandas as pd #As reference; already imported above\n",
+    "\n",
+    "df = pd.read_csv('Bank_complaints.csv')\n",
+    "print(df.info())\n",
+    "df.head()"
    ]
   },
   {
@@ -87,11 +172,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student loan                   0.190067\n",
+       "Credit card                    0.159000\n",
+       "Consumer Loan                  0.157900\n",
+       "Mortgage                       0.138867\n",
+       "Bank account or service        0.138483\n",
+       "Credit reporting               0.114400\n",
+       "Checking or savings account    0.101283\n",
+       "Name: Product, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df[\"Product\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -123,7 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#As a quick preliminary, briefly review the docstring for the Keras.preprocessing.text.Tokenizer method:\n",
+    "#As a quick preliminary,\n",
+    "#briefly review the docstring for the Keras.preprocessing.text.Tokenizer method:\n",
     "Tokenizer?"
    ]
   },
@@ -154,12 +259,16 @@
     "sequences = tokenizer.texts_to_sequences(complaints) #Generate sequences\n",
     "print('sequences type:', type(sequences))\n",
     "\n",
-    "one_hot_results= tokenizer.texts_to_matrix(complaints, mode='binary') #Similar to sequences, but returns a numpy array\n",
+    "one_hot_results= tokenizer.texts_to_matrix(complaints, mode='binary')\n",
+    "#Similar to sequences, but returns a numpy array\n",
+    "\n",
     "print('one_hot_results type:', type(one_hot_results))\n",
     "\n",
-    "word_index = tokenizer.word_index #Useful if we wish to decode (more explanation below)\n",
+    "word_index = tokenizer.word_index\n",
+    "#Useful if we wish to decode (more explanation below)\n",
     "\n",
-    "print('Found %s unique tokens.' % len(word_index)) #Tokens are the number of unique words across the corpus\n",
+    "print('Found %s unique tokens.' % len(word_index)) \n",
+    "#Tokens are the number of unique words across the corpus\n",
     "\n",
     "\n",
     "print('Dimensions of our coded results:', np.shape(one_hot_results)) #Our coded data"
@@ -184,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "reverse_index = "
+    "reverse_index = dict([(value, key) for (key, value) in word_index.items()])"
    ]
   },
   {
@@ -234,8 +343,10 @@
     "print(complaints[comment_idx_to_preview])\n",
     "print('\\n\\n')\n",
     "\n",
-    "#The reverse_index cell block above must be complete in order for this cell block to successively execute.\n",
-    "decoded_review = ' '.join([reverse_index.get(i) for i in sequences[comment_idx_to_preview]])\n",
+    "#The reverse_index cell block above must be complete in\n",
+    "#order for this cell block to successively execute.\n",
+    "decoded_review = ' '.join([reverse_index.get(i) \n",
+    "                           for i in sequences[comment_idx_to_preview]])\n",
     "print('Decoded review from Tokenizer:')\n",
     "print(decoded_review)"
    ]
@@ -284,20 +395,24 @@
    "source": [
     "product = df[\"Product\"]\n",
     "\n",
-    "le = preprocessing.LabelEncoder() #Initialize. le used as abbreviation fo label encoder\n",
+    "le = preprocessing.LabelEncoder() \n",
+    "#Initialize. le used as abbreviation fo label encoder\n",
     "le.fit(product)\n",
     "print(\"Original class labels:\")\n",
     "print(list(le.classes_))\n",
     "print('\\n')\n",
     "product_cat = le.transform(product)  \n",
-    "#list(le.inverse_transform([0, 1, 3, 3, 0, 6, 4])) #If you wish to retrieve the original descriptive labels post production\n",
+    "#list(le.inverse_transform([0, 1, 3, 3, 0, 6, 4])) \n",
+    "#If you wish to retrieve the original descriptive labels post production\n",
     "\n",
     "print('New product labels:')\n",
     "print(product_cat)\n",
     "print('\\n')\n",
     "\n",
     "\n",
-    "print('One hot labels; 7 binary columns, one for each of the categories.') #Each row will be all zeros except for the category for that observation.\n",
+    "print('One hot labels; 7 binary columns, one for each of the categories.') \n",
+    "#Each row will be all zeros except for the category for that observation.\n",
+    "\n",
     "product_onehot = to_categorical(product_cat)\n",
     "print(product_onehot)\n",
     "print('\\n')\n",
@@ -582,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
