--- a/index.ipynb
+++ b/index.ipynb
@@ -234,14 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sequences type: <class 'list'>\n"
+      "sequences type: <class 'list'>\n",
+      "one_hot_results type: <class 'numpy.ndarray'>\n",
+      "Found 50110 unique tokens.\n",
+      "Dimensions of our coded results: (60000, 2000)\n"
      ]
     }
    ],
@@ -290,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
