--- a/index.ipynb
+++ b/index.ipynb
@@ -492,12 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; initialize a sequential model with 3 layers; \n",
-    "#two hidden relu and the final classification output using softmax"
+    "#two hidden relu and the final classification output using softmax\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Dense(50, activation='relu', input_shape=(2000,))) #2 hidden layers\n",
+    "model.add(layers.Dense(25, activation='relu'))\n",
+    "model.add(layers.Dense(7, activation='softmax'))"
    ]
   },
   {
