--- a/index.ipynb
+++ b/index.ipynb
@@ -515,11 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "model.compile(optimizer='SGD',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -535,9 +538,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/120\n",
+      "14592/58500 [======>.......................] - ETA: 1s - loss: 1.9184 - acc: 0.2020"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "history = model.fit(train,\n",
+    "                    label_train,\n",
+    "                    epochs=120,\n",
+    "                    batch_size=256)"
    ]
   },
   {
