Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/120\n",
-      "14592/58500 [======>.......................] - ETA: 1s - loss: 1.9184 - acc: 0.2020"
+      "58500/58500 [==============================] - 2s 39us/step - loss: 1.8545 - acc: 0.2643\n",
+      "Epoch 2/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 1.5833 - acc: 0.4831\n",
+      "Epoch 3/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 1.2108 - acc: 0.6333\n",
+      "Epoch 4/120\n",
+      "58500/58500 [==============================] - 2s 37us/step - loss: 0.9412 - acc: 0.7004\n",
+      "Epoch 5/120\n",
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.7993 - acc: 0.7293\n",
+      "Epoch 6/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.7239 - acc: 0.7454\n",
+      "Epoch 7/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.6784 - acc: 0.7571\n",
+      "Epoch 8/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.6469 - acc: 0.7656\n",
+      "Epoch 9/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.6234 - acc: 0.7742\n",
+      "Epoch 10/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.6044 - acc: 0.7796\n",
+      "Epoch 11/120\n",
+      "35328/58500 [=================>............] - ETA: 0s - loss: 0.5870 - acc: 0.7858"
      ]
     }
    ],
