Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -564,7 +564,29 @@
       "Epoch 10/120\n",
       "58500/58500 [==============================] - 2s 32us/step - loss: 0.6044 - acc: 0.7796\n",
       "Epoch 11/120\n",
-      "35328/58500 [=================>............] - ETA: 0s - loss: 0.5870 - acc: 0.7858"
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.5889 - acc: 0.7850\n",
+      "Epoch 12/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.5752 - acc: 0.7905\n",
+      "Epoch 13/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.5631 - acc: 0.7962\n",
+      "Epoch 14/120\n",
+      "58500/58500 [==============================] - 2s 37us/step - loss: 0.5527 - acc: 0.8003\n",
+      "Epoch 15/120\n",
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.5428 - acc: 0.8037\n",
+      "Epoch 16/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.5341 - acc: 0.8074\n",
+      "Epoch 17/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.5262 - acc: 0.8101\n",
+      "Epoch 18/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.5188 - acc: 0.8128\n",
+      "Epoch 19/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.5119 - acc: 0.8150\n",
+      "Epoch 20/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.5056 - acc: 0.8177\n",
+      "Epoch 21/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4999 - acc: 0.8202\n",
+      "Epoch 22/120\n",
+      "17152/58500 [=======>......................] - ETA: 1s - loss: 0.4919 - acc: 0.8240"
      ]
     }
    ],
