--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,29 @@
       "Epoch 21/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.4999 - acc: 0.8202\n",
       "Epoch 22/120\n",
-      "17152/58500 [=======>......................] - ETA: 1s - loss: 0.4919 - acc: 0.8240"
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.4943 - acc: 0.8218\n",
+      "Epoch 23/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.4892 - acc: 0.8247\n",
+      "Epoch 24/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4842 - acc: 0.8257\n",
+      "Epoch 25/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.4796 - acc: 0.8275\n",
+      "Epoch 26/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.4755 - acc: 0.8297\n",
+      "Epoch 27/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.4710 - acc: 0.8318\n",
+      "Epoch 28/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.4669 - acc: 0.8334\n",
+      "Epoch 29/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.4634 - acc: 0.8343\n",
+      "Epoch 30/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4597 - acc: 0.8359\n",
+      "Epoch 31/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4562 - acc: 0.8373\n",
+      "Epoch 32/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4530 - acc: 0.8391\n",
+      "Epoch 33/120\n",
+      "19712/58500 [=========>....................] - ETA: 1s - loss: 0.4408 - acc: 0.8424"
      ]
     }
    ],
