Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -608,7 +608,29 @@
       "Epoch 32/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.4530 - acc: 0.8391\n",
       "Epoch 33/120\n",
-      "19712/58500 [=========>....................] - ETA: 1s - loss: 0.4408 - acc: 0.8424"
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.4499 - acc: 0.8400\n",
+      "Epoch 34/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.4471 - acc: 0.8409\n",
+      "Epoch 35/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4440 - acc: 0.8423\n",
+      "Epoch 36/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.4410 - acc: 0.8434\n",
+      "Epoch 37/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.4384 - acc: 0.8451\n",
+      "Epoch 38/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.4360 - acc: 0.8457\n",
+      "Epoch 39/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4333 - acc: 0.8471\n",
+      "Epoch 40/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.4309 - acc: 0.8476\n",
+      "Epoch 41/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4288 - acc: 0.8480\n",
+      "Epoch 42/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4263 - acc: 0.8483\n",
+      "Epoch 43/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.4235 - acc: 0.8498\n",
+      "Epoch 44/120\n",
+      " 9216/58500 [===>..........................] - ETA: 1s - loss: 0.4123 - acc: 0.8541"
      ]
     }
    ],
