Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -630,7 +630,29 @@
       "Epoch 43/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.4235 - acc: 0.8498\n",
       "Epoch 44/120\n",
-      " 9216/58500 [===>..........................] - ETA: 1s - loss: 0.4123 - acc: 0.8541"
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.4219 - acc: 0.8510\n",
+      "Epoch 45/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.4197 - acc: 0.8512\n",
+      "Epoch 46/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.4176 - acc: 0.8522\n",
+      "Epoch 47/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.4156 - acc: 0.8526\n",
+      "Epoch 48/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.4137 - acc: 0.8538\n",
+      "Epoch 49/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.4117 - acc: 0.8544\n",
+      "Epoch 50/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.4100 - acc: 0.8546\n",
+      "Epoch 51/120\n",
+      "58500/58500 [==============================] - 2s 27us/step - loss: 0.4080 - acc: 0.8552\n",
+      "Epoch 52/120\n",
+      "58500/58500 [==============================] - 2s 26us/step - loss: 0.4065 - acc: 0.8562\n",
+      "Epoch 53/120\n",
+      "58500/58500 [==============================] - 2s 27us/step - loss: 0.4046 - acc: 0.8566\n",
+      "Epoch 54/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.4031 - acc: 0.8572\n",
+      "Epoch 55/120\n",
+      "42240/58500 [====================>.........] - ETA: 0s - loss: 0.4005 - acc: 0.8585"
      ]
     }
    ],
