Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -652,7 +652,29 @@
       "Epoch 54/120\n",
       "58500/58500 [==============================] - 2s 28us/step - loss: 0.4031 - acc: 0.8572\n",
       "Epoch 55/120\n",
-      "42240/58500 [====================>.........] - ETA: 0s - loss: 0.4005 - acc: 0.8585"
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.4013 - acc: 0.8574\n",
+      "Epoch 56/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3996 - acc: 0.8584\n",
+      "Epoch 57/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3979 - acc: 0.8581\n",
+      "Epoch 58/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3966 - acc: 0.8588\n",
+      "Epoch 59/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.3950 - acc: 0.8599\n",
+      "Epoch 60/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.3936 - acc: 0.8604\n",
+      "Epoch 61/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.3921 - acc: 0.8609\n",
+      "Epoch 62/120\n",
+      "58500/58500 [==============================] - 2s 28us/step - loss: 0.3907 - acc: 0.8613\n",
+      "Epoch 63/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3892 - acc: 0.8619\n",
+      "Epoch 64/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3880 - acc: 0.8622\n",
+      "Epoch 65/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3865 - acc: 0.8623\n",
+      "Epoch 66/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3849 - acc: 0.8634\n"
      ]
     }
    ],
