Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -674,7 +674,29 @@
       "Epoch 65/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.3865 - acc: 0.8623\n",
       "Epoch 66/120\n",
-      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3849 - acc: 0.8634\n"
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3849 - acc: 0.8634\n",
+      "Epoch 67/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.3839 - acc: 0.8642\n",
+      "Epoch 68/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3823 - acc: 0.8651\n",
+      "Epoch 69/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3812 - acc: 0.8643\n",
+      "Epoch 70/120\n",
+      "58500/58500 [==============================] - 2s 36us/step - loss: 0.3799 - acc: 0.8649\n",
+      "Epoch 71/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3788 - acc: 0.8662\n",
+      "Epoch 72/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3775 - acc: 0.8663\n",
+      "Epoch 73/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3762 - acc: 0.8661\n",
+      "Epoch 74/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3750 - acc: 0.8672\n",
+      "Epoch 75/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3738 - acc: 0.8670\n",
+      "Epoch 76/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3725 - acc: 0.8678\n",
+      "Epoch 77/120\n",
+      "50688/58500 [========================>.....] - ETA: 0s - loss: 0.3726 - acc: 0.8684"
      ]
     }
    ],
