--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,35 @@
       "Epoch 76/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.3725 - acc: 0.8678\n",
       "Epoch 77/120\n",
-      "50688/58500 [========================>.....] - ETA: 0s - loss: 0.3726 - acc: 0.8684"
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.3716 - acc: 0.8688\n",
+      "Epoch 78/120\n",
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.3703 - acc: 0.8683\n",
+      "Epoch 79/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3694 - acc: 0.8690\n",
+      "Epoch 80/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3682 - acc: 0.8695\n",
+      "Epoch 81/120\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3670 - acc: 0.8699\n",
+      "Epoch 82/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.3657 - acc: 0.8696\n",
+      "Epoch 83/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3650 - acc: 0.8706\n",
+      "Epoch 84/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3639 - acc: 0.8710\n",
+      "Epoch 85/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3627 - acc: 0.8708\n",
+      "Epoch 86/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3618 - acc: 0.8722\n",
+      "Epoch 87/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3604 - acc: 0.8721\n",
+      "Epoch 88/120\n",
+      "58500/58500 [==============================] - 2s 27us/step - loss: 0.3595 - acc: 0.8726\n"
      ]
     }
    ],
