Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -724,7 +724,29 @@
       "Epoch 87/120\n",
       "58500/58500 [==============================] - 2s 30us/step - loss: 0.3604 - acc: 0.8721\n",
       "Epoch 88/120\n",
-      "58500/58500 [==============================] - 2s 27us/step - loss: 0.3595 - acc: 0.8726\n"
+      "58500/58500 [==============================] - 2s 27us/step - loss: 0.3595 - acc: 0.8726\n",
+      "Epoch 89/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.3580 - acc: 0.8735\n",
+      "Epoch 90/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3574 - acc: 0.8729\n",
+      "Epoch 91/120\n",
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.3561 - acc: 0.8738\n",
+      "Epoch 92/120\n",
+      "58500/58500 [==============================] - 2s 37us/step - loss: 0.3557 - acc: 0.8743\n",
+      "Epoch 93/120\n",
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.3544 - acc: 0.8749\n",
+      "Epoch 94/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3536 - acc: 0.8743\n",
+      "Epoch 95/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3524 - acc: 0.8746\n",
+      "Epoch 96/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3513 - acc: 0.8758\n",
+      "Epoch 97/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3507 - acc: 0.8760\n",
+      "Epoch 98/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3496 - acc: 0.8766\n",
+      "Epoch 99/120\n",
+      "24320/58500 [===========>..................] - ETA: 1s - loss: 0.3425 - acc: 0.8787"
      ]
     }
    ],
@@ -779,7 +801,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; plot the loss vs the number of epoch"
+    "#Your code here; plot the loss vs the number of epoch\n",
+    "\n",
+    "history_dict = history.history\n",
+    "loss_values = history_dict['loss']\n",
+    "\n",
+    "epochs = range(1, len(loss_values) + 1)\n",
+    "plt.plot(epochs, loss_values, 'g', label='Training loss')\n",
+    "\n",
+    "plt.title('Training loss')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
