Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -746,7 +746,29 @@
       "Epoch 98/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.3496 - acc: 0.8766\n",
       "Epoch 99/120\n",
-      "24320/58500 [===========>..................] - ETA: 1s - loss: 0.3425 - acc: 0.8787"
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.3487 - acc: 0.8769\n",
+      "Epoch 100/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3478 - acc: 0.8772\n",
+      "Epoch 101/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3462 - acc: 0.8784\n",
+      "Epoch 102/120\n",
+      "58500/58500 [==============================] - 2s 34us/step - loss: 0.3457 - acc: 0.8783\n",
+      "Epoch 103/120\n",
+      "58500/58500 [==============================] - 2s 37us/step - loss: 0.3445 - acc: 0.8781\n",
+      "Epoch 104/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3438 - acc: 0.8781\n",
+      "Epoch 105/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3428 - acc: 0.8790\n",
+      "Epoch 106/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3417 - acc: 0.8793\n",
+      "Epoch 107/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3412 - acc: 0.8793\n",
+      "Epoch 108/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3396 - acc: 0.8804\n",
+      "Epoch 109/120\n",
+      "58500/58500 [==============================] - 2s 31us/step - loss: 0.3389 - acc: 0.8804\n",
+      "Epoch 110/120\n",
+      " 3328/58500 [>.............................] - ETA: 1s - loss: 0.3228 - acc: 0.8846"
      ]
     }
    ],
@@ -822,7 +844,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; plot the training accuracy vs the number of epochs"
+    "#Your code here; plot the training accuracy vs the number of epochs\n",
+    "\n",
+    "acc_values = history_dict['acc'] \n",
+    "\n",
+    "plt.plot(epochs, acc_values, 'r', label='Training acc')\n",
+    "plt.title('Training accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
