--- a/index.ipynb
+++ b/index.ipynb
@@ -768,7 +768,27 @@
       "Epoch 109/120\n",
       "58500/58500 [==============================] - 2s 31us/step - loss: 0.3389 - acc: 0.8804\n",
       "Epoch 110/120\n",
-      " 3328/58500 [>.............................] - ETA: 1s - loss: 0.3228 - acc: 0.8846"
+      "58500/58500 [==============================] - 2s 36us/step - loss: 0.3378 - acc: 0.8801\n",
+      "Epoch 111/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3367 - acc: 0.8810\n",
+      "Epoch 112/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3362 - acc: 0.8815\n",
+      "Epoch 113/120\n",
+      "58500/58500 [==============================] - 2s 37us/step - loss: 0.3350 - acc: 0.8819\n",
+      "Epoch 114/120\n",
+      "58500/58500 [==============================] - 2s 35us/step - loss: 0.3341 - acc: 0.8826\n",
+      "Epoch 115/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3328 - acc: 0.8829\n",
+      "Epoch 116/120\n",
+      "58500/58500 [==============================] - 2s 29us/step - loss: 0.3321 - acc: 0.8836\n",
+      "Epoch 117/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3310 - acc: 0.8833\n",
+      "Epoch 118/120\n",
+      "58500/58500 [==============================] - 2s 30us/step - loss: 0.3302 - acc: 0.8837\n",
+      "Epoch 119/120\n",
+      "58500/58500 [==============================] - 2s 32us/step - loss: 0.3292 - acc: 0.8841\n",
+      "Epoch 120/120\n",
+      "28416/58500 [=============>................] - ETA: 0s - loss: 0.3267 - acc: 0.8868"
      ]
     }
    ],
@@ -878,7 +898,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat_test = #Your code here; Output (probability) predictions for the test set."
+    "y_hat_test = model.predict(test) \n",
+    "#Your code here; Output (probability) predictions for the test set."
    ]
   },
   {
@@ -896,7 +917,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; print the loss and accuracy for the training set."
+    "#Your code here; print the loss and accuracy for the training set.\n",
+    "#Your code here; print the loss and accuracy for the training set.\n",
+    "results_train = model.evaluate(train, label_train)\n",
+    "results_train"
    ]
   },
   {
