Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
       "Epoch 119/120\n",
       "58500/58500 [==============================] - 2s 32us/step - loss: 0.3292 - acc: 0.8841\n",
       "Epoch 120/120\n",
-      "28416/58500 [=============>................] - ETA: 0s - loss: 0.3267 - acc: 0.8868"
+      "58500/58500 [==============================] - 2s 33us/step - loss: 0.3282 - acc: 0.8847\n"
      ]
     }
    ],
@@ -929,7 +929,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; print the loss and accuracy for the test set."
+    "#Your code here; print the loss and accuracy for the test set.\n",
+    "results_test = model.evaluate(test, label_test)\n",
+    "results_test"
    ]
   },
   {
